05Jul01=======================================================================
1. disconnect channels whose route node has disappeared
29Jun01=======================================================================
1. fix merge command
28Jun01=======================================================================
1. fix problems with users on more than one node
27Jun01=======================================================================
1. try adding an ARC mail hack
2. slug the not here messages so they can't loopback
25Jun01=======================================================================
1. added automatic 'not here' message
21Jun01=======================================================================
1. fix (some) problems with 'init'
2. fix stat/msg a bit more
3. small change to PC28 generation to make sure that the subject always 
contains at least a blank
16Jun01=======================================================================
1. fix talk
2. fix stat/msg 
14Jun01=======================================================================
1. changed debug api to (potentially) use less cpu time
2. changed the spider.cgi in Arnold's borrowed java client to Ian's perl 
script
3. Added input route filtering
4. put back the set/isolate logic into routing which is now overridable with
filters whcih means a default filter is no longer generated. If you want the
OLD behaviour, do rm /spider/filter/route/*.pl*, restart and try again. 
5. Add http_proxy to Internet.pm and allow sh/qrz to use an HTTP Proxy
13Jun01=======================================================================
1. fix init cnd rinit cmds
2. add missing clear/route cmd
10Jun01=======================================================================
1. fix set/here and unset/here
2. fix indirect routing to users two hops away
09Jun01=======================================================================
1. more fixes
2. add set/debug filter so that you can see why your filters aren't working