@@ -1,3 +1,5 @@
+06Jul01=======================================================================
+1. fix talk and routing problems to mycall
 05Jul01=======================================================================
 1. disconnect channels whose route node has disappeared
 29Jun01=======================================================================
